--- a/chat.html
+++ b/chat.html
@@ -1,347 +1,59 @@
-<!doctype html>
-<html lang="pl">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ARKON • Komunikator (Netlify)</title>
-<meta name="description" content="Lekki komunikator ARKON z backendem Netlify Functions: pokoje, wysyłanie wiadomości, załączniki (Blobs), reakcje, prosty reload.">
-<style>
-  :root{
-    --bg:#0b1020; --p1:#101736; --p2:#0f1a44; --ink:#e8edff; --muted:#aeb8da; --accent:#4cc9f0;
-    --ok:#2b8a57; --bad:#ff6b6b; --line:#253166; --chip:#162357; --card:#0f1533; --hover:#172152;
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{margin:0;background:linear-gradient(180deg,#0a0f1e,#0c1230 55%,#0a0f1e);color:var(--ink);font:15px/1.5 system-ui,Segoe UI,Roboto,Arial}
-  header{padding:12px 16px;border-bottom:1px solid var(--line);background:#11183a;position:sticky;top:0;z-index:5}
-  h1{margin:0;font-size:20px}
-  .wrap{display:grid;grid-template-columns:300px 1fr;gap:12px;height:calc(100% - 58px);padding:12px;max-width:1500px;margin:auto}
-  .panel{background:linear-gradient(180deg,var(--p1),var(--p2));border:1px solid var(--line);border-radius:14px;overflow:hidden}
-  .left{display:flex;flex-direction:column}
-  .section{padding:10px;border-bottom:1px solid var(--line)}
-  .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-  .pill{display:inline-flex;align-items:center;gap:6px;background:#0d1530;border:1px dashed #2b3a77;border-radius:999px;padding:6px 10px;color:#aeb8da;font-size:12px}
-  .btn{background:#233261;border:1px solid #3a4ca3;color:#fff;border-radius:10px;padding:9px 12px;cursor:pointer}
-  .btn.ghost{background:transparent;border:1px dashed #3a4ca3}
-  .btn.ok{background:#194d34;border-color:var(--ok)}
-  .btn.bad{background:#42202a;border-color:#7b3341}
-  input,select,textarea{width:100%;background:#0d1530;border:1px solid #28356c;border-radius:10px;padding:9px;color:var(--ink)}
-  .topbar{display:flex;justify-content:space-between;align-items:center;padding:10px 12px;border-bottom:1px solid var(--line)}
-  .meta{font-size:11px;color:#aeb8da}
-  .badge{display:inline-block;padding:1px 6px;border:1px solid #5672d1;border-radius:999px;font-size:10px;background:#0e184a;color:#cfe1ff}
-  .msg-wrap{height:calc(100% - 200px);overflow:auto;padding:12px;display:flex;flex-direction:column;gap:10px}
-  .day{display:flex;align-items:center;gap:10px;margin:2px 0}
-  .day::before,.day::after{content:"";height:1px;background:#223160;flex:1}
-  .msg{display:grid;grid-template-columns:auto 1fr;gap:8px;align-items:flex-start}
-  .bubble{background:linear-gradient(180deg,#111a3c,#0f1a44);border:1px solid #2a3a75;border-radius:12px;padding:8px 10px;max-width:980px;word-break:break-word}
-  .bubble.me{background:#16204d;border-color:#3d58c1}
-  .bubble .tools{display:flex;gap:6px;opacity:.85;margin-top:4px}
-  .bubble .btn-icon{background:transparent;border:1px solid #2d3e86;border-radius:8px;padding:2px 6px;cursor:pointer;color:#cfe1ff}
-  .bubble .file{display:inline-flex;gap:6px;align-items:center;padding:3px 6px;border:1px dashed #3a4ca3;border-radius:8px;margin-top:4px}
-  .reactions{display:flex;gap:4px;margin-top:4px;flex-wrap:wrap}
-  .react{background:#0e184a;border:1px solid #3f57c1;border-radius:999px;padding:2px 6px;font-size:12px;cursor:pointer}
-  .composer{border-top:1px solid var(--line);padding:10px;display:grid;grid-template-columns:1fr auto;gap:8px}
-  .toolbar{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
-  .loadmore{padding:8px 10px;text-align:center;border:1px dashed #2b3a77;border-radius:10px;cursor:pointer;background:#0d1530}
-  .hoverable:hover{background:var(--hover)}
-  @media(max-width:1060px){ .wrap{grid-template-columns:1fr} .msg-wrap{height:50vh} }
-  a{color:#cfe1ff}
-</style>
-</head>
-<body>
-<header>
-  <h1 style="display:flex;align-items:center;gap:10px;margin-bottom:6px">Komunikator • ARKON <span class="badge">Netlify</span></h1>
-</header>
+// Upload załączników do Netlify Blobs (chat-uploads)
+import { getStore } from "@netlify/blobs";
 
-<div class="wrap">
-  <!-- LEWY PANEL -->
-  <aside class="panel left" id="left">
-    <div class="section">
-      <div class="meta">Pokoje prywatne</div>
-      <div class="row" style="margin-top:6px">
-        <button class="btn ghost" data-room="krolowa">👑 Królowa</button>
-        <button class="btn ghost" data-room="adrian">👤 Adrian</button>
-        <button class="btn ghost" data-room="emil">👤 Emil</button>
-        <button class="btn ghost" data-room="global">🌍 Wspólny</button>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="meta">Wyszukiwanie lokalne</div>
-      <div class="row" style="margin-top:6px">
-        <input id="q" placeholder="fraza… (Enter)" />
-        <button class="btn ghost" id="btnSearch">Szukaj</button>
-      </div>
-      <div class="row" style="margin-top:6px">
-        <select id="authorFilter" style="flex:1">
-          <option value="">— Autor —</option>
-          <option>Królowa</option><option>Adrian</option><option>Emil</option><option>Pracownik</option><option>Anon</option>
-        </select>
-        <button class="btn ghost" id="btnClear">Wyczyść</button>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="meta">Eksport (widoczna lista)</div>
-      <div class="row" style="margin-top:6px">
-        <button class="btn ghost" id="btnCSV">CSV</button>
-        <button class="btn ghost" id="btnJSON">JSON</button>
-        <button class="btn ghost" id="btnReload">Odśwież</button>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="meta">Ja</div>
-      <div class="row" style="margin-top:6px">
-        <span class="pill">Podpis: <b id="meName">—</b></span>
-        <button class="btn ghost" id="btnName">✎ Zmień</button>
-      </div>
-      <div class="meta" id="conn" style="margin-top:6px">inicjalizacja…</div>
-    </div>
-  </aside>
-
-  <!-- PRAWO -->
-  <main class="panel" id="page-chat" style="display:flex;flex-direction:column">
-    <div class="topbar">
-      <div class="row">
-        <div id="roomTitle"><b>—</b></div>
-        <span class="badge" title="Prosty reload po wysyłce">Ręczny refresh</span>
-      </div>
-      <div class="toolbar">
-        <button class="btn ghost" id="btnEmoji">😊 Emoji</button>
-        <button class="btn ghost" id="btnPickFile">📎 Załącz</button>
-        <input id="file" type="file" hidden>
-      </div>
-    </div>
-
-    <div id="msgs" class="msg-wrap" aria-live="polite">
-      <div class="loadmore hoverable" id="older">⟲ Załaduj starsze…</div>
-    </div>
-
-    <div class="composer">
-      <div class="row" style="width:100%">
-        <textarea id="txt" placeholder="Napisz wiadomość… (Ctrl+Enter wysyła)" rows="2" style="flex:1"></textarea>
-      </div>
-      <div class="row">
-        <button id="btnSend" class="btn ok">Wyślij ▶</button>
-      </div>
-    </div>
-  </main>
-</div>
-
-<script>
-(() => {
-'use strict';
-
-/*** KONFIG BACKENDU (Netlify Functions) ***/
-const API = {
-  messages: '/api/messages',
-  upload:   '/api/upload'
+const CORS = {
+  "Access-Control-Allow-Origin": "*",
+  "Access-Control-Allow-Methods": "POST,OPTIONS",
+  "Access-Control-Allow-Headers": "Content-Type"
 };
+const j = (status, body = {}) => ({
+  statusCode: status,
+  headers: { "Content-Type": "application/json; charset=utf-8", ...CORS },
+  body: JSON.stringify(body)
+});
+const ok = (b = {}) => j(200, b);
+const bad = (m = "Bad Request") => j(400, { error: m });
 
-/*** POMOCNICZE ***/
-const $ = s => document.querySelector(s);
-const el = (tag, attrs={}) => Object.assign(document.createElement(tag), attrs);
-const INT = new Intl.DateTimeFormat('pl-PL', { dateStyle:'short', timeStyle:'short' });
-const csvEsc = v => { let s = v==null ? '' : String(v); if(/[;"\n]/.test(s)) s = '"' + s.replace(/"/g,'""') + '"'; return s; };
-const esc = s => (s==null ? '' : String(s)).replace(/[&<>"]/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[c]));
+const store = getStore("chat-uploads");
+const rid = (p = "") => ${p}${Date.now().toString(36)}-${Math.random().toString(36).slice(2, 9)};
 
-/*** STAN ***/
-let state = {
-  room: localStorage.getItem('chat_room') || 'global',
-  me:   localStorage.getItem('chat_me')   || 'Pracownik',
-  messages: [],
-  oldest: null,
-  search: { q:'', author:'' }
-};
+export async function handler(event) {
+  if (event.httpMethod === "OPTIONS") return { statusCode: 204, headers: CORS };
+  if (event.httpMethod !== "POST") return j(405, { error: "Method not allowed" });
 
-$('#meName').textContent = state.me;
-$('#roomTitle').innerHTML = '<b>'+state.room.toUpperCase()+'</b>';
-$('#conn').textContent = 'gotowe';
+  try {
+    // Netlify Functions dostaje body (często base64). Użyjmy Web API, żeby sparsować form-data
+    const ct = event.headers["content-type"] || event.headers["Content-Type"] || "";
+    if (!ct.startsWith("multipart/form-data")) return bad("Wymagane multipart/form-data z polem 'file'");
 
-/*** RENDER ***/
-function fileChip(url){
-  const name = (url||'').split('/').pop();
-  const isImg = /\.(png|jpe?g|gif|webp|bmp|svg)$/i.test(name||'');
-  const a = '<a class="file" href="'+esc(url)+'" target="_blank" rel="noopener">📎 '+esc(name||'plik')+'</a>';
-  const img = isImg ? '<div style="margin-top:6px"><img src="'+esc(url)+'" alt="" style="max-width:280px;border:1px solid #2b3a77;border-radius:10px"></div>' : '';
-  return a + img;
-}
-function reactionBadge(emoji, count){ return '<span class="react" data-r="'+emoji+'">'+emoji+' '+count+'</span>'; }
-function bubbleHtml(m){
-  const me = m.author===state.me;
-  const when = INT.format(new Date(m.created_at));
-  const reacts = (m.reactions && typeof m.reactions==='object') ? Object.entries(m.reactions).filter(([,v])=>v>0) : [];
-  const body = m.deleted_at ? '<i class="meta">[wiadomość usunięta]</i>' : esc(m.body||'').replace(/(https?:\/\/\S+)/g, '<a href="$1" target="_blank" rel="noopener">$1</a>');
-  let html = '';
-  html += '<div class="msg" id="m-'+m.id+'">';
-  html += '  <div class="meta">'+(me?'Ja':esc(m.author||'—'))+'</div>';
-  html += '  <div class="bubble '+(me?'me':'')+'">';
-  html += '    '+body;
-  if(m.file_url) html += fileChip(m.file_url);
-  html += '    <div class="tools">';
-  html += '      <button class="btn-icon" data-react="👍" data-id="'+m.id+'">👍</button>';
-  html += '      <button class="btn-icon" data-react="❤" data-id="'+m.id+'">❤</button>';
-  html += '      <button class="btn-icon" data-react="🔥" data-id="'+m.id+'">🔥</button>';
-  html += '      <span class="meta" style="margin-left:auto">'+when+(m.edited_at?' • ed.':'')+'</span>';
-  html += '    </div>';
-  if(reacts.length) html += '    <div class="reactions">'+reacts.map(([emo,c])=>reactionBadge(emo,c)).join(' ')+'</div>';
-  html += '  </div>';
-  html += '</div>';
-  return html;
-}
-function render(list){
-  const msgs = $('#msgs');
-  const out = [];
-  let lastDay = '';
-  (list||[]).forEach(m=>{
-    const d = (m.created_at||'').slice(0,10);
-    if(d && d!==lastDay){
-      out.push('<div class="day"><span>'+esc(INT.format(new Date(m.created_at)).split(',')[0])+'</span></div>');
-      lastDay = d;
-    }
-    out.push(bubbleHtml(m));
-  });
-  const older = $('#older').outerHTML;
-  msgs.innerHTML = older + out.join('');
-  msgs.scrollTop = msgs.scrollHeight;
+    const raw = Buffer.from(event.body || "", event.isBase64Encoded ? "base64" : "utf8");
+    const req = new Request("http://local/upload", { method: "POST", headers: { "content-type": ct }, body: raw });
+    const form = await req.formData();
+    const file = form.get("file");
 
-  // podpinamy reakcje
-  msgs.querySelectorAll('[data-react]').forEach(b=>{
-    b.addEventListener('click', async ()=>{
-      const id = b.getAttribute('data-id');
-      const emoji = b.getAttribute('data-react');
-      try{
-        await fetch(API.messages, { method:'PATCH', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ id, reaction: emoji }) });
-        await load(true);
-      }catch(e){ console.error(e); alert('Błąd reakcji'); }
+    if (!file || typeof file.arrayBuffer !== "function") return bad("Pole 'file' nie znalezione");
+
+    const room = String(form.get("room") || "global");
+    const ext = (file.name.split(".").pop() || "bin").toLowerCase();
+    const key = uploads/${room}/${new Date().toISOString().replace(/[:.]/g, "-")}-${rid()}.${ext};
+
+    const buf = await file.arrayBuffer();
+    await store.set(key, buf, {
+      metadata: { name: file.name || "", type: file.type || "application/octet-stream", size: file.size || 0 }
     });
-  });
-}
 
-/*** API ***/
-async function apiGetMessages(before){
-  const u = new URL(API.messages, location.origin);
-  u.searchParams.set('room', state.room);
-  if(before) u.searchParams.set('before', before);
-  const r = await fetch(u.toString(), { headers:{'Accept':'application/json'} });
-  if(!r.ok) throw new Error('HTTP '+r.status);
-  return r.json(); // {items, oldest}
-}
-async function apiSend({text, fileUrl, parentId}){
-  const payload = { room: state.room, author: state.me, body: text||'', fileUrl: fileUrl||null, parentId: parentId||null };
-  const r = await fetch(API.messages, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload) });
-  if(!r.ok) throw new Error('HTTP '+r.status);
-  return r.json();
-}
-async function apiUpload(file){
-  const fd = new FormData();
-  fd.append('file', file);
-  const r = await fetch(API.upload, { method:'POST', body: fd });
-  if(!r.ok) throw new Error('HTTP '+r.status);
-  return r.json(); // { ok, url }
-}
+    // Publiczny URL do assetu w Blobs (ten sam origin)
+    const url = /.netlify/blobs/${encodeURIComponent("chat-uploads")}/${encodeURIComponent(key)};
 
-/*** DZIAŁANIE ***/
-async function load(keepScroll){
-  try{
-    const { items, oldest } = await apiGetMessages();
-    let list = items||[];
-    // lokalny filtr
-    if(state.search.author) list = list.filter(m => (m.author||'')===state.search.author);
-    if(state.search.q){
-      const rx = new RegExp(state.search.q.replace(/[.*+?^${}()|[\]\\]/g,'\\$&'),'i');
-      list = list.filter(m => rx.test(m.body||'') || rx.test(m.file_url||''));
-    }
-    state.messages = list;
-    state.oldest = oldest || null;
-    render(state.messages);
-  }catch(e){
-    console.error(e); alert('Błąd pobierania wiadomości');
+    return j(201, {
+      ok: true,
+      key,
+      url,            // frontend wstawi to jako file_url w wiadomości
+      name: file.name,
+      type: file.type || "application/octet-stream",
+      size: file.size || 0
+    });
+  } catch (e) {
+    return j(500, { error: e?.message || String(e) });
   }
 }
-async function loadOlder(){
-  if(!state.oldest) { $('#older').textContent='— brak starszych —'; return; }
-  try{
-    const { items, oldest } = await apiGetMessages(state.oldest);
-    const older = (items||[]);
-    if(!older.length){ $('#older').textContent='— brak starszych —'; return; }
-    const combined = older.concat(state.messages);
-    state.messages = combined;
-    state.oldest = oldest || state.oldest;
-    render(state.messages);
-  }catch(e){ console.error(e); }
-}
-async function sendText(){
-  const t = ($('#txt').value||'').trim();
-  if(!t) return;
-  try{
-    await apiSend({ text: t });
-    $('#txt').value='';
-    await load();
-  }catch(e){ console.error(e); alert('Błąd wysyłania'); }
-}
-async function sendFile(){
-  const f = $('#file').files[0];
-  if(!f) return;
-  try{
-    const up = await apiUpload(f);
-    if(!up || !up.url){ alert('Nie otrzymano URL pliku'); return; }
-    await apiSend({ text: 'Załącznik: '+(f.name||'plik'), fileUrl: up.url });
-    $('#file').value = '';
-    await load();
-  }catch(e){ console.error(e); alert('Błąd załącznika'); }
-}
-
-/*** UI BINDINGS ***/
-document.querySelectorAll('[data-room]').forEach(b=>{
-  b.addEventListener('click', async ()=>{
-    const id = b.getAttribute('data-room');
-    if(state.room===id) return;
-    state.room=id; localStorage.setItem('chat_room', id);
-    $('#roomTitle').innerHTML = '<b>'+id.toUpperCase()+'</b>';
-    state.oldest=null; state.search={q:'',author:''};
-    $('#q').value=''; $('#authorFilter').value='';
-    await load();
-  });
-});
-$('#btnName').addEventListener('click', ()=>{
-  const n = prompt('Twój podpis (imię w czacie):', state.me) || state.me;
-  state.me=n; localStorage.setItem('chat_me', n); $('#meName').textContent=n;
-});
-$('#btnEmoji').addEventListener('click', ()=>{
-  const el = $('#txt');
-  el.value = (el.value||'') + ' 😊';
-  el.focus();
-});
-$('#btnPickFile').addEventListener('click', ()=>$('#file').click());
-$('#file').addEventListener('change', sendFile);
-$('#btnSend').addEventListener('click', sendText);
-$('#txt').addEventListener('keydown', (e)=>{ if(e.key==='Enter' && (e.ctrlKey||e.metaKey)){ e.preventDefault(); sendText(); }});
-$('#older').addEventListener('click', loadOlder);
-$('#btnReload').addEventListener('click', load);
-
-$('#btnSearch').addEventListener('click', ()=>{ state.search.q = ($('#q').value||'').trim(); load(); });
-$('#q').addEventListener('keydown', (e)=>{ if(e.key==='Enter'){ state.search.q = ($('#q').value||'').trim(); load(); }});
-$('#authorFilter').addEventListener('change', (e)=>{ state.search.author = e.target.value||''; load(); });
-$('#btnClear').addEventListener('click', ()=>{ state.search={q:'',author:''}; $('#q').value=''; $('#authorFilter').value=''; load(); });
-
-$('#btnCSV').addEventListener('click', ()=>{
-  const rows=[['id','author','body','file','time','edited','deleted']];
-  state.messages.forEach(m=>rows.push([
-    m.id, m.author||'', m.body||'', m.file_url||'', m.created_at||'', m.edited_at||'', m.deleted_at||''
-  ]));
-  const csv = rows.map(r=>r.map(csvEsc).join(';')).join('\n');
-  const a=el('a',{href:URL.createObjectURL(new Blob([csv],{type:'text/csv;charset=utf-8'})), download:'chat.csv'}); a.click();
-});
-$('#btnJSON').addEventListener('click', ()=>{
-  const a=el('a',{href:URL.createObjectURL(new Blob([JSON.stringify(state.messages,null,2)],{type:'application/json'})), download:'chat.json'}); a.click();
-});
-
-/*** START ***/
-load();
-
-})();
-</script>
-</body>
-</html>
